wiki/src/install/inc/stylesheets/assistant.css
/* LAYOUT */

.banner, .page {
  box-sizing: content-box;
}

#tails-installation-assistant {
  position: absolute;
  top: -57px;
  right: 436px;
  font-family: "Source Sans Pro Regular", "DejaVu Sans", "Verdana", "sans-serif";
  font-size: 20px;
  font-weight: 100;
  color: white;
  text-transform: capitalize;
}

.parentlinks {
  display: none;
}

.sidebar {
  display: none;
}

#footer {
  display: none;
}

#searchform {
  display: none;
}

.pageheader .actions {
  display: none;
}

.pageheader #otherlanguages {
  top: -35px;
  right: 5px;
}

span.title {
  display: none;
}


/* CONTENT */

body {
  font-family: "DejaVu Sans","Verdana",sans-serif;
  color: #000;
  margin-bottom: 100px;
}

span.title {
  margin-top: 0px;
}

#content {
  padding-top: 20px;
}

#pagebody #content .panel a {
  color: black !important;
  border-bottom: 0px !important;
}

.also {
  margin-top: 10px;
  font-size: 17px;
}

.also div {
  padding-top: 10px;
  border-top: 2px solid #0A0;
}

.also ul {
  margin: 0px;
}

#pagebody #content .also small ul li a {
  color: #505050 !important;
  text-decoration: underline !important;
}

#pagebody #content .also small ul li a:hover {
  color: #0A0 !important;
}

#pagebody a {
  border: none;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "Source Sans Pro Regular", "DejaVu Sans", "Verdana", "sans-serif";
}

h1 {
  font-weight: 100;
  margin-bottom: 30px;
  margin-top: 0px;
}

h1 strong {
  font-weight: 800;
  -webkit-box-shadow: 0px -10px #0A0 inset;
  box-shadow: 0px -10px #0A0 inset;
}

h1:before {
  display: none;
}

h3, h4, p, ul {
  margin-bottom: 1.5em;
}

p, ul, ol, h1, h2, h3, h4, h5, h6 {
  max-width: none;
}

p, h3, h4 {
  color: #505050;
}

ul {
  color: black;
}

ul {
  padding-left: 20px;
}

small {
  font-size: 0.85em !important;
}

td, th {
  padding: 5px;
}

/* markdown add a p at the top of the page */
#content > p {
  margin-top: 0;
}


/* BACK BUTTON */


#pagebody .back {
  border: solid 1px #56347C;
  border-radius: 4px;
  display: inline-block;
  padding: 5px;
  position: relative;
  left: -30px;
  top: -5px;
  text-decoration: none !important;
  background: white;
}


#pagebody .back:hover {
  border: solid 1px #0A0;
  background: #0A0;
  color: white;
}

#pagebody .back:hover a {
  color: #56347C;
}

#pagebody .back a {
  color: #56347C;
}


/* PANELS */

.panel {
  border-bottom-width: 4px;
  border-color: #56347C;
  margin-top: 30px;
}

.panel-primary > .panel-heading {
  text-align: center;
  border: none;
  transition: 0.1s;
  background: #56347C;
  color: white;
}

.panel-primary > .panel-heading:hover {
  background: white;
  color: black;
}

.panel-primary > .panel-heading:active {
  color: black;
  background: white;
}

.panel-title {
  font-weight: bold;
  padding: 15px;
  height: 3em;
}

.two-lines {
  padding: 9px;
}

.panel-footer {
  background: none;
  border-color: #0A0;
  color: #646464;
}

/* Hide all scenario-dependent bits by default. */

.clone, .usb, .dvd, .vm, .download-only,
.install-clone,
.windows, .windows-usb,
.mac, .mac-usb, .mac-dvd, .mac-clone,
.debian, .debian-usb,
.expert, .expert-usb,
.linux, .linux-usb,
.upgrade, .upgrade-clone, .upgrade-tails {
  display: none;
}


/* TOGGLE */

#install div.toggleable, #bittorrent-minor div.toggleable, #needs div.toggleable, #scenarios div.toggleable {
  background: white !important;
  border: 1px solid #0A0;
  -webkit-box-shadow: 5px 5px #0A0;
  box-shadow: 5px 5px #0A0;
  padding: 10px;
  margin-left: auto;
  margin-right: auto;
  margin-top: -5px;
  position: absolute;
  text-align: left;
  font-size: 13px;
  z-index: 1;
}

#download-and-verify div.toggleable p, #needs div.toggleable p, #scenarios div.toggleable p {
  margin-bottom: 0px;
}

#needs div.toggleable {
  margin-top: 0.4em;
  width: 40em;
  left: -10em;
}

#scenarios div.toggleable {
  left: -5em;
  margin-top: 0.3em;
  width: 35em;
}

#openpgp div.toggleable {
  background: none;
  border: none;
  padding: 0;
  margin: 0;
}

a.toggle {
  border-bottom: 1px dashed black !important;
  cursor: help;
  text-decoration: none !important;
}

.hide a.toggle {
  border-bottom: none !important;
  cursor: pointer;
}

#download-and-verify div.toggleable a.toggle, #needs div.toggleable a.toggle, #scenarios div.toggleable a.toggle {
  border: none !important;
  cursor: pointer;
  position: absolute;
  right: 7px;
  top: 5px;
}


/*==========  Non-Mobile First Method  ==========*/

/* Large Devices, Wide Screens */
@media only screen and (max-width : 1200px) {

}

/* Medium Devices, Desktops */
@media only screen and (max-width : 992px) {

}

/* Small Devices, Tablets */
@media only screen and (max-width : 768px) {

  .page {
    padding: 0px 1em 1em;
  }

  #tails-installation-assistant {
    display: none;
  }

}

/* Extra Small Devices, Phones */
@media only screen and (max-width : 480px) {

}

/* Custom, iPhone Retina */
@media only screen and (max-width : 320px) {

}

